Fixing contrast issue on nav bar

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -80,7 +80,7 @@ img:hover {
 .tagline {
   margin-top: -10px;
   font-size: 24px;
-  color: #dde2f1;
+  color: #565252;
 }
 
 .socialIcons {
